Added automated testing point

--- a/Predictor.ipynb
+++ b/Predictor.ipynb
@@ -1,22 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1><center>Training our classifier model </center></h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Importing the required libraries and modules:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +165,11 @@
       "[nltk_data]    | Downloading package qc to /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package qc is already up-to-date!\n",
       "[nltk_data]    | Downloading package reuters to\n",
+      "[nltk_data]    |     /home/pranay/nltk_data...\n",
+      "[nltk_data]    |   Package reuters is already up-to-date!\n",
+      "[nltk_data]    | Downloading package rte to /home/pranay/nltk_data...\n",
+      "[nltk_data]    |   Package rte is already up-to-date!\n",
+      "[nltk_data]    | Downloading package semcor to\n",
       "[nltk_data]    |     /home/pranay/nltk_data...\n"
      ]
     },
@@ -186,11 +177,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data]    |   Package reuters is already up-to-date!\n",
-      "[nltk_data]    | Downloading package rte to /home/pranay/nltk_data...\n",
-      "[nltk_data]    |   Package rte is already up-to-date!\n",
-      "[nltk_data]    | Downloading package semcor to\n",
-      "[nltk_data]    |     /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package semcor is already up-to-date!\n",
       "[nltk_data]    | Downloading package senseval to\n",
       "[nltk_data]    |     /home/pranay/nltk_data...\n",
@@ -354,7 +340,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-96e24d2d7241>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-1f41e4ab95fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.cross_validation'"
      ]
     }
@@ -381,169 +367,29 @@
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.cross_validation import train_test\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Loading the cleaned dataset and visualising the dimensions of it:"
+    "import pickle\n",
+    "\n",
+    "from sklearn.cross_validation import train_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>url</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>flair</th>\n",
-       "      <th>score</th>\n",
-       "      <th>id</th>\n",
-       "      <th>author</th>\n",
-       "      <th>body</th>\n",
-       "      <th>timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Will donate thrice the number of upvotes (amou...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/981o7s...</td>\n",
-       "      <td>832.0</td>\n",
-       "      <td>[R]eddiquette</td>\n",
-       "      <td>19710.0</td>\n",
-       "      <td>981o7s</td>\n",
-       "      <td>TheBeginnerr</td>\n",
-       "      <td>&gt;**Note**: If you want to know what this is al...</td>\n",
-       "      <td>2018-08-18 1:32:17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Fuck all Religion</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/f9outu...</td>\n",
-       "      <td>4198.0</td>\n",
-       "      <td>Politics</td>\n",
-       "      <td>17885.0</td>\n",
-       "      <td>f9outu</td>\n",
-       "      <td>pking3</td>\n",
-       "      <td>Fuck all religion. Fuck Hindusim, fuck Islam, ...</td>\n",
-       "      <td>2020-02-26 19:40:49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Megathread: India-Pakistan border skirmish</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/avafxp...</td>\n",
-       "      <td>6913.0</td>\n",
-       "      <td>[R]eddiquette</td>\n",
-       "      <td>10210.0</td>\n",
-       "      <td>avafxp</td>\n",
-       "      <td>doc_two_thirty</td>\n",
-       "      <td>There is a lot of news and speculation coming ...</td>\n",
-       "      <td>2019-02-27 20:26:35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Help, ideas needed. HLL poisoned my village wi...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/38heyu...</td>\n",
-       "      <td>257.0</td>\n",
-       "      <td>[R]eddiquette</td>\n",
-       "      <td>8057.0</td>\n",
-       "      <td>38heyu</td>\n",
-       "      <td>UnileverCancerFactor</td>\n",
-       "      <td>I don't want to leave this be, and need some h...</td>\n",
-       "      <td>2015-06-04 19:24:17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>My friend passed away and TOI made a mockery o...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/4m5l2k...</td>\n",
-       "      <td>241.0</td>\n",
-       "      <td>[R]eddiquette</td>\n",
-       "      <td>6555.0</td>\n",
-       "      <td>4m5l2k</td>\n",
-       "      <td>ForPranitaThrowaway</td>\n",
-       "      <td>http://timesofindia.indiatimes.com/videos/news...</td>\n",
-       "      <td>2016-06-02 18:30:32</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               title  \\\n",
-       "0  Will donate thrice the number of upvotes (amou...   \n",
-       "1                                  Fuck all Religion   \n",
-       "2         Megathread: India-Pakistan border skirmish   \n",
-       "3  Help, ideas needed. HLL poisoned my village wi...   \n",
-       "4  My friend passed away and TOI made a mockery o...   \n",
-       "\n",
-       "                                                 url  comments          flair  \\\n",
-       "0  https://www.reddit.com/r/india/comments/981o7s...     832.0  [R]eddiquette   \n",
-       "1  https://www.reddit.com/r/india/comments/f9outu...    4198.0       Politics   \n",
-       "2  https://www.reddit.com/r/india/comments/avafxp...    6913.0  [R]eddiquette   \n",
-       "3  https://www.reddit.com/r/india/comments/38heyu...     257.0  [R]eddiquette   \n",
-       "4  https://www.reddit.com/r/india/comments/4m5l2k...     241.0  [R]eddiquette   \n",
-       "\n",
-       "     score      id                author  \\\n",
-       "0  19710.0  981o7s          TheBeginnerr   \n",
-       "1  17885.0  f9outu                pking3   \n",
-       "2  10210.0  avafxp        doc_two_thirty   \n",
-       "3   8057.0  38heyu  UnileverCancerFactor   \n",
-       "4   6555.0  4m5l2k   ForPranitaThrowaway   \n",
-       "\n",
-       "                                                body            timestamp  \n",
-       "0  >**Note**: If you want to know what this is al...   2018-08-18 1:32:17  \n",
-       "1  Fuck all religion. Fuck Hindusim, fuck Islam, ...  2020-02-26 19:40:49  \n",
-       "2  There is a lot of news and speculation coming ...  2019-02-27 20:26:35  \n",
-       "3  I don't want to leave this be, and need some h...  2015-06-04 19:24:17  \n",
-       "4  http://timesofindia.indiatimes.com/videos/news...  2016-06-02 18:30:32  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flares = [\"AskIndia\", \"Non-Political\", \"[R]eddiquette\", \"Scheduled\", \"Photography\", \"Science/Technology\", \"Politics\", \"Business/Finance\", \"Policy/Economy\", \"Sports\", \"Food\", \"AMA\"]\n",
     "\n",
     "\n",
-    "rindi = pd.read_csv('../Data/cleaned.csv')\n",
-    "rindi.head()"
+    "rindi = pd.read_csv('Data/cleaned.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def get_date(created):\n",
     "    return dt.datetime.fromtimestamp(created)\n",
     "\n",
@@ -557,24 +403,13 @@
     "     text = REPLACE_BY_SPACE_RE.sub(' ', text)\n",
     "     text = BAD_SYMBOLS_RE.sub('', text)\n",
     "     text = ' '.join(word for word in text.split() if word not in STOPWORDS)\n",
-    "     return text\n"
+    "     return text\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "REPLACE_BY_SPACE_RE = re.compile('[/(){}\\[\\]\\|@,;]')\n",
-    "BAD_SYMBOLS_RE = re.compile('[^0-9a-z #+_]')\n",
-    "STOPWORDS = set(stopwords.words('english'))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -587,6 +422,10 @@
     }
    ],
    "source": [
+    "REPLACE_BY_SPACE_RE = re.compile('[/(){}\\[\\]\\|@,;]')\n",
+    "BAD_SYMBOLS_RE = re.compile('[^0-9a-z #+_]')\n",
+    "STOPWORDS = set(stopwords.words('english'))\n",
+    "\n",
     "rindi['title'] = rindi['title'].apply(string_form)\n",
     "rindi['body'] = rindi['body'].apply(string_form)\n",
     "rindi['comments'] = rindi['comments'].apply(string_form)\n",
@@ -601,226 +440,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nb_classifier(X_train, X_test, y_train, y_test):\n",
-    "  \n",
-    "  from sklearn.naive_bayes import MultinomialNB\n",
+    "X = rindi.feature_combine\n",
+    "y = rindi.flair\n",
     "\n",
     "\n",
-    "  nb = Pipeline([('vect', CountVectorizer()),\n",
-    "                 ('tfidf', TfidfTransformer()),\n",
-    "                 ('clf', MultinomialNB()),\n",
-    "                ])\n",
-    "  nb.fit(X_train, y_train)\n",
-    "\n",
-    "  y_pred = nb.predict(X_test)\n",
-    "\n",
-    "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "  #print(classification_report(y_test, y_pred,target_names=flares))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def linear_svm(X_train, X_test, y_train, y_test):\n",
-    "  \n",
-    "  from sklearn.linear_model import SGDClassifier\n",
-    "\n",
-    "  sgd = Pipeline([('vect', CountVectorizer()),\n",
+    "sgd = Pipeline([('vect', CountVectorizer()),\n",
     "                  ('tfidf', TfidfTransformer()),\n",
     "                  ('clf', SGDClassifier(loss='hinge', penalty='l2',alpha=1e-3, random_state=42, max_iter=5, tol=None)),\n",
     "                 ])\n",
-    "  sgd.fit(X_train, y_train)\n",
     "\n",
-    "  y_pred = sgd.predict(X_test)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state = 42)\n",
     "\n",
-    "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "  #print(classification_report(y_test, y_pred,target_names=flares))"
+    "sgd.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = sgd.predict(X_test)\n",
+    "\n",
+    "\n",
+    "#print('accuracy %s' % accuracy_score(y_pred, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    \n",
-    "def logisticreg(X_train, X_test, y_train, y_test):\n",
-    "\n",
-    "    from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "    logreg = Pipeline([('vect', CountVectorizer()),\n",
-    "                  ('tfidf', TfidfTransformer()),\n",
-    "                  ('clf', LogisticRegression(n_jobs=1, C=1e30)),\n",
-    "                 ])\n",
-    "    logreg.fit(X_train, y_train)\n",
-    "\n",
-    "    y_pred = logreg.predict(X_test)\n",
-    "\n",
-    "    print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "   # print(classification_report(y_test, y_pred,target_names=flairs))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def randomforest(X_train, X_test, y_train, y_test):\n",
-    "  \n",
-    "  from sklearn.ensemble import RandomForestClassifier\n",
-    "  \n",
-    "  ranfor = Pipeline([('vect', CountVectorizer()),\n",
-    "                  ('tfidf', TfidfTransformer()),\n",
-    "                  ('clf', RandomForestClassifier(n_estimators = 1000, random_state = 42)),\n",
-    "                 ])\n",
-    "  ranfor.fit(X_train, y_train)\n",
-    "\n",
-    "  y_pred = ranfor.predict(X_test)\n",
-    "\n",
-    "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "  #print(classification_report(y_test, y_pred,target_names=flairs))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def mlpclassifier(X_train, X_test, y_train, y_test):\n",
-    "  \n",
-    "  from sklearn.neural_network import MLPClassifier\n",
-    "  \n",
-    "  mlp = Pipeline([('vect', CountVectorizer()),\n",
-    "                  ('tfidf', TfidfTransformer()),\n",
-    "                  ('clf', MLPClassifier(hidden_layer_sizes=(30,30,30))),\n",
-    "                 ])\n",
-    "  mlp.fit(X_train, y_train)\n",
-    "\n",
-    "  y_pred = mlp.predict(X_test)\n",
-    "\n",
-    "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "  #print(classification_report(y_test, y_pred,target_names=flairs))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_test(X,y):\n",
-    " \n",
-    "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state = 42)\n",
-    "\n",
-    "  print(\"Results of Naive Bayes Classifier\")\n",
-    "  nb_classifier(X_train, X_test, y_train, y_test)\n",
-    "  print(\"Results of Linear Support Vector Machine\")\n",
-    "  linear_svm(X_train, X_test, y_train, y_test)\n",
-    "  print(\"Results of Logistic Regression\")\n",
-    "  logisticreg(X_train, X_test, y_train, y_test)\n",
-    "  print(\"Results of Random Forest\")\n",
-    "  randomforest(X_train, X_test, y_train, y_test)\n",
-    "  print(\"Results of MLP Classifier\")\n",
-    "  mlpclassifier(X_train, X_test, y_train, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Flair Detection using Title as Feature:\n",
-      "\n",
-      "\n",
-      "accuracy 0.8113207547169812\n",
-      "\n",
-      "\n",
-      "Flair Detection using Body as Feature:\n",
-      "\n",
-      "\n",
-      "accuracy 0.8278301886792453\n",
-      "\n",
-      "\n",
-      "Flair Detection using URL as Feature:\n",
-      "\n",
-      "\n",
-      "accuracy 0.7523584905660378\n",
-      "\n",
-      "\n",
-      "Flair Detection using Comments as Feature:\n",
-      "\n",
-      "\n",
-      "accuracy 0.4056603773584906\n",
-      "\n",
-      "\n",
-      "Flair Detection using combined features as Feature:\n",
-      "\n",
-      "\n",
-      "accuracy 0.8325471698113207\n"
-     ]
-    }
-   ],
-   "source": [
-    "cat = rindi.flair\n",
-    "\n",
-    "V = rindi.feature_combine\n",
-    "W = rindi.comments\n",
-    "X = rindi.title\n",
-    "Y = rindi.body\n",
-    "Z = rindi.url\n",
-    "\n",
-    "print(\"Flair Detection using Title as Feature:\")\n",
-    "print(\"\\n\")\n",
-    "train_test(X,cat)\n",
-    "print(\"\\n\")\n",
-    "print(\"Flair Detection using Body as Feature:\")\n",
-    "print(\"\\n\")\n",
-    "train_test(Y,cat)\n",
-    "print(\"\\n\")\n",
-    "print(\"Flair Detection using URL as Feature:\")\n",
-    "print(\"\\n\")\n",
-    "train_test(Z,cat)\n",
-    "print(\"\\n\")\n",
-    "print(\"Flair Detection using Comments as Feature:\")\n",
-    "print(\"\\n\")\n",
-    "train_test(W,cat)\n",
-    "print(\"\\n\")\n",
-    "print(\"Flair Detection using combined features as Feature:\")\n",
-    "print(\"\\n\")\n",
-    "train_test(V,cat)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dump(linear_svm, open('model.pkl','wb'))"
+    "pickle.dump(sgd, open('model.pkl','wb'))"
    ]
   },
   {
