Updated gunicorn version

--- a/Predictor.ipynb
+++ b/Predictor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -165,11 +165,6 @@
       "[nltk_data]    | Downloading package qc to /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package qc is already up-to-date!\n",
       "[nltk_data]    | Downloading package reuters to\n",
-      "[nltk_data]    |     /home/pranay/nltk_data...\n",
-      "[nltk_data]    |   Package reuters is already up-to-date!\n",
-      "[nltk_data]    | Downloading package rte to /home/pranay/nltk_data...\n",
-      "[nltk_data]    |   Package rte is already up-to-date!\n",
-      "[nltk_data]    | Downloading package semcor to\n",
       "[nltk_data]    |     /home/pranay/nltk_data...\n"
      ]
     },
@@ -177,6 +172,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[nltk_data]    |   Package reuters is already up-to-date!\n",
+      "[nltk_data]    | Downloading package rte to /home/pranay/nltk_data...\n",
+      "[nltk_data]    |   Package rte is already up-to-date!\n",
+      "[nltk_data]    | Downloading package semcor to\n",
+      "[nltk_data]    |     /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package semcor is already up-to-date!\n",
       "[nltk_data]    | Downloading package senseval to\n",
       "[nltk_data]    |     /home/pranay/nltk_data...\n",
@@ -340,7 +340,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-1f41e4ab95fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-1f41e4ab95fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.cross_validation'"
      ]
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
     "\n",
     "def clean_text(text):\n",
     "     from sklearn.linear_model import SGDClassifier\n",
-    "     text = BeautifulSoup(text, \"lxml\").text\n",
+    "     text = BeautifulSoup(text).text\n",
     "     text = text.lower()\n",
     "     text = REPLACE_BY_SPACE_RE.sub(' ', text)\n",
     "     text = BAD_SYMBOLS_RE.sub('', text)\n",
@@ -409,18 +409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pranay/anaconda3/lib/python3.7/site-packages/bs4/__init__.py:314: UserWarning: \"b'.'\" looks like a filename, not markup. You should probably open this file and pass the filehandle into Beautiful Soup.\n",
-      "  ' Beautiful Soup.' % markup)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "REPLACE_BY_SPACE_RE = re.compile('[/(){}\\[\\]\\|@,;]')\n",
     "BAD_SYMBOLS_RE = re.compile('[^0-9a-z #+_]')\n",
@@ -440,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,11 +456,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(sgd, open('model.pkl','wb'))"
+    "pickle.dump(sgd, open('model1.pkl','wb'))"
    ]
   },
   {
