--- a/Notebooks/Part3.ipynb
+++ b/Notebooks/Part3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -179,13 +179,7 @@
       "[nltk_data]    | Downloading package qc to /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package qc is already up-to-date!\n",
       "[nltk_data]    | Downloading package reuters to\n",
-      "[nltk_data]    |     /home/pranay/nltk_data...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[nltk_data]    |     /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package reuters is already up-to-date!\n",
       "[nltk_data]    | Downloading package rte to /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package rte is already up-to-date!\n",
@@ -354,7 +348,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-96e24d2d7241>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-12-2ee083d61a9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclassification_report\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSGDClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.cross_validation'"
      ]
     }
@@ -394,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +518,7 @@
        "4  http://timesofindia.indiatimes.com/videos/news...  2016-06-02 18:30:32  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +546,7 @@
     "\n",
     "def clean_text(text):\n",
     "     from sklearn.linear_model import SGDClassifier\n",
-    "     text = BeautifulSoup(text, \"lxml\").text\n",
+    "     text = BeautifulSoup(text).text\n",
     "     text = text.lower()\n",
     "     text = REPLACE_BY_SPACE_RE.sub(' ', text)\n",
     "     text = BAD_SYMBOLS_RE.sub('', text)\n",
@@ -562,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,12 +613,12 @@
     "  y_pred = nb.predict(X_test)\n",
     "\n",
     "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "  #print(classification_report(y_test, y_pred,target_names=flares))\n"
+    "  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,12 +635,12 @@
     "  y_pred = sgd.predict(X_test)\n",
     "\n",
     "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "  #print(classification_report(y_test, y_pred,target_names=flares))"
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,12 +658,12 @@
     "    y_pred = logreg.predict(X_test)\n",
     "\n",
     "    print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "   # print(classification_report(y_test, y_pred,target_names=flairs))\n"
+    "   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,12 +681,12 @@
     "  y_pred = ranfor.predict(X_test)\n",
     "\n",
     "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "  #print(classification_report(y_test, y_pred,target_names=flairs))\n"
+    "  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,13 +703,12 @@
     "\n",
     "  y_pred = mlp.predict(X_test)\n",
     "\n",
-    "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "  #print(classification_report(y_test, y_pred,target_names=flairs))"
+    "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -747,31 +740,138 @@
       "Flair Detection using Title as Feature:\n",
       "\n",
       "\n",
+      "Results of Naive Bayes Classifier\n",
+      "accuracy 0.6792452830188679\n",
+      "Results of Linear Support Vector Machine\n",
       "accuracy 0.8113207547169812\n",
+      "Results of Logistic Regression\n",
+      "accuracy 0.8231132075471698\n",
+      "Results of Random Forest\n",
+      "accuracy 0.8042452830188679\n",
+      "Results of MLP Classifier\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pranay/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.8042452830188679\n",
       "\n",
       "\n",
       "Flair Detection using Body as Feature:\n",
       "\n",
       "\n",
+      "Results of Naive Bayes Classifier\n",
+      "accuracy 0.5636792452830188\n",
+      "Results of Linear Support Vector Machine\n",
       "accuracy 0.8278301886792453\n",
+      "Results of Logistic Regression\n",
+      "accuracy 0.8066037735849056\n",
+      "Results of Random Forest\n",
+      "accuracy 0.8207547169811321\n",
+      "Results of MLP Classifier\n",
+      "accuracy 0.7971698113207547\n",
       "\n",
       "\n",
       "Flair Detection using URL as Feature:\n",
       "\n",
       "\n",
+      "Results of Naive Bayes Classifier\n",
+      "accuracy 0.5754716981132075\n",
+      "Results of Linear Support Vector Machine\n",
+      "accuracy 0.7523584905660378\n",
+      "Results of Logistic Regression\n",
+      "accuracy 0.7523584905660378\n",
+      "Results of Random Forest\n",
+      "accuracy 0.6886792452830188\n",
+      "Results of MLP Classifier\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pranay/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "accuracy 0.7523584905660378\n",
       "\n",
       "\n",
       "Flair Detection using Comments as Feature:\n",
       "\n",
       "\n",
+      "Results of Naive Bayes Classifier\n",
+      "accuracy 0.46226415094339623\n",
+      "Results of Linear Support Vector Machine\n",
       "accuracy 0.4056603773584906\n",
+      "Results of Logistic Regression\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pranay/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.4716981132075472\n",
+      "Results of Random Forest\n",
+      "accuracy 0.46462264150943394\n",
+      "Results of MLP Classifier\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pranay/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.45990566037735847\n",
       "\n",
       "\n",
       "Flair Detection using combined features as Feature:\n",
       "\n",
       "\n",
-      "accuracy 0.8325471698113207\n"
+      "Results of Naive Bayes Classifier\n",
+      "accuracy 0.5589622641509434\n",
+      "Results of Linear Support Vector Machine\n",
+      "accuracy 0.8325471698113207\n",
+      "Results of Logistic Regression\n",
+      "accuracy 0.8254716981132075\n",
+      "Results of Random Forest\n",
+      "accuracy 0.8089622641509434\n",
+      "Results of MLP Classifier\n",
+      "accuracy 0.8372641509433962\n"
      ]
     }
    ],
